inicio front e back - (merge main)

--- a/apilamoon/Properties/launchSettings.json
+++ b/apilamoon/Properties/launchSettings.json
@@ -4,27 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:37735",
-      "sslPort": 44393
+      "applicationUrl": "http://localhost:57357",
+      "sslPort": 44348
     }
   },
   "profiles": {
-    "http": {
+    "apilamoon": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5022",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7267;http://localhost:5022",
+      "applicationUrl": "https://localhost:7232;http://localhost:5214",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
