--- a/weblamoon/package.json
+++ b/weblamoon/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-material": "^1.0.0-beta-16"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
