--- a/weblamoon/package.json
+++ b/weblamoon/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-material": "^1.0.0-beta-16"
+    "vue": "^3.3.4",
+    "vue-material": "^1.0.0-beta-16",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
