--- a/weblamoon/package.json
+++ b/weblamoon/package.json
@@ -9,9 +9,14 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "autoprefixer": "^10",
     "axios": "^1.5.0",
     "core-js": "^3.8.3",
+    "postcss": "^8",
     "roboto-fontface": "*",
+    "tailwindcss": "^3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vuetify": "^3.0.0-beta.0",
@@ -25,6 +30,7 @@
     "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "vue-cli-plugin-tailwind": "~3.0.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
