--- a/weblamoon/package.json
+++ b/weblamoon/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "core-js": "^3.8.3",
+    "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
     "vue-material": "^1.0.0-beta-16",
     "vue-router": "^4.2.4"
