--- a/weblamoon/package.json
+++ b/weblamoon/package.json
@@ -20,6 +20,7 @@
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vuetify": "^3.0.0-beta.0",
+    "vuex": "^4.1.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
