--- a/weblamoon/package.json
+++ b/weblamoon/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "postcss": "^8",
     "roboto-fontface": "*",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
