--- a/weblamoon/package.json
+++ b/weblamoon/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.2.5",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.1.0",
+    "vuex-persist": "^3.1.3",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
