--- a/weblamoon/package.json
+++ b/weblamoon/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "5.9.55",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "^10",
     "axios": "^1.5.0",
     "core-js": "^3.8.3",
